--- a/M2U3/Material Ejercicio/base.css
+++ b/M2U3/Material Ejercicio/base.css
@@ -7,13 +7,8 @@ body {
 	font-size:100%;
 	margin: 0;
 }
-#contenedor {
-	width: 800px;
-	background: #8FA68E;
-	margin-right:auto;
-	margin-left:auto;
-	overflow: hidden;
-}
+
+
 nav {
 	background: #CC3910;
 	float: left;
@@ -58,4 +53,11 @@ li{
 	a {
 		color: #000;
 	}
+	#contenedor {
+		width: 100%;
+		background: #8FA68E;
+		margin-right:auto;
+		margin-left:auto;
+		overflow: hidden;
+}
 }
