--- a/SITIO NUTRICION/css/nutricion.css
+++ b/SITIO NUTRICION/css/nutricion.css
@@ -189,3 +189,106 @@ line-height: 30px;
     flex-direction: row-reverse;
 }
 /*final servicios*/ 
+/*inicio galeria*/
+.Tips{
+    display: flex;
+    justify-content: space-between;
+    
+}
+.tip{
+    border: 1px solid #fdb4bf;
+    border-radius: 5px;
+    height: 350px;
+    text-align: center;
+    padding: 13px;
+    box-sizing: border-box;
+    margin: 10px;
+    background: #fdb4bf;
+
+}
+.tip img{
+    height: 75px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+}
+.tip img:hover{
+transform: scale(1.15);
+
+}
+.tip h6{
+    margin: 0;
+    font-weight: normal;
+    color: #000000;
+}
+.tip h5{
+    margin: 0;
+    font-weight: normal;
+    color: black;
+    font-size: 20px;
+    margin-top: 5px;
+    line-height: 25px;
+
+}
+.tip h6{
+    font-size: 15px;
+    background: #ffffff;
+    font-family:'Times New Roman', Times, serif;
+    border-radius: 5%;
+    padding: 5px;
+    height: 150px;
+    display: flex;
+justify-content: center;
+align-items: center;
+   
+    
+}
+.tip p{
+    color: #000;
+    font-size: 5px;
+}
+
+/*final galeria*/
+/*inicio contacto*/
+
+.contacto{
+    display: flex;
+    gap: 24px;
+}
+.contacto div{
+    width: 100%;
+}
+.datos p{
+    font-size: 14px;
+}
+.datos ul li img{
+   width: 100px;
+   margin: 50px;
+}
+.formulario p{
+    display: flex;
+}
+.formulario p label{
+    min-width: 80px;
+    align-items: center;
+}
+.formulario p:nth-child(4){
+    align-items: start;
+}
+.formulario textarea{
+    resize: none;
+    height: 150px;
+}
+.formulario input[type="submit"]{
+background: #6da9ed;
+box-shadow: 0 0 10px rgba(0,0,0,0.4);
+color: white;
+font-size: 16px;
+padding: 6px 20px;
+width: auto;
+position: relative;
+left: 5 rem;
+cursor: pointer;
+}
+.formulario input[type="submit"]:hover{
+    background-color: #2e64a1;
+}
+/*final contacto*/
